Fix img alignments

--- a/src/Gallery/Gallery.module.scss
+++ b/src/Gallery/Gallery.module.scss
@@ -43,7 +43,7 @@
   }
 }
 
-img {
+.itemImg {
   display: block;
   max-width: 100%;
 }
