--- a/src/Partners/Partners.module.scss
+++ b/src/Partners/Partners.module.scss
@@ -26,6 +26,11 @@
   }
 }
 
+.logo {
+  display: block;
+  max-width: 100%;
+}
+
 .support {
   position: relative;
   display: flex;
